--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1; /* Behind all content */
+}
+
 /* Landing Page Styles */
 .landing-page {
     display: flex;
