--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav a:hover {
 
 /* Graphic Section */
 .graphic-section {
-  background: url('images/Website-gema.png') no-repeat center center;
+  background: url('Website gema.png') no-repeat center center;
   background-size: cover;
   color: #fff;
   display: flex;
