--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ nav a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('images/Website-gema.png') no-repeat center center;
+  background: url('Website gema.png') no-repeat center center;
   background-size: contain; /* Adjusts the image scaling */
   z-index: 1; /* Keeps the image behind the content */
   opacity: 1; /* Adjust the transparency if needed */
