--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ nav a:hover {
   background-color: #3d007a; /* Solid dark background */
   background: url('Website gema.png') no-repeat center center;
   background-size: cover;
-  color: #fff;
+  color: #3d007a;
   display: flex;
   justify-content: center;
   align-items: center;
